# type-level-numbers

./: .gitignore  .hgignore  .hgtags  .travis.yml  ChangeLog  LICENSE  README.md  type-level-numbers.cabal  type-numbers.cabal
.github/workflows/: ci.yml
TypeLevel/: Boolean.hs  Reify.hs  Util.hs
TypeLevel/Number/: Classes.hs  Int.hs  Nat.hs
TypeLevel/Number/Int/: Types.hs
TypeLevel/Number/Nat/: Num.hs  TH.hs  Types.hs
Types/: Boolean.hs
Types/Number/: Classes.hs  Int.hs  Nat.hs
Types/Number/Int/: Types.hs
test/: TestNat.hs  int.hs  nat.hs
