Name:           type-numbers
Version:        0.1
Cabal-Version:  >= 1.2
License:        BSD3
License-File:   LICENSE
Author:         Alexey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Alexey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       
Category:       Type System
Build-Type:     Simple
Synopsis:       
  Type level numbers (natural and signed integeger) implemented using
  type families.
Description:
  This is type level numbers implemented using type families. Natural
  numbers use binary encoding. With default context stack numbers up
  to 2^18-1 coudl be represented. Integer numbers use balanced ternary
  encoding.

  So far comparison of numbers, subtraction and multiplication of
  numbers are supported.
  
Library
  Build-Depends:   base,
                   template-haskell
  Exposed-modules: Types.Number.Classes
                   Types.Number.Nat
                   Types.Number.Int
                   Types.Boolean
  Other-modules:   Types.Number.Nat.Types
                   Types.Number.Int.Types
                   Types.Util
