Name:           type-numbers
Version:        0.1
Cabal-Version:  >= 1.6
License:        BSD3
License-File:   LICENSE
Author:         Alexey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Alexey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       
Category:       Type System
Build-Type:     Simple
Synopsis:       
  Type level numbers implemented using type families.
Description:
  This is type level numbers implemented using type families. Natural
  numbers use binary encoding. With default context stack numbers up
  to 2^18-1 coudl be represented. Integer numbers use balanced ternary
  encoding.
  .
  So far comparison of numbers, subtraction and multiplication of
  numbers are supported.

source-repository head
  type:     hg
  location: http://bitbucket.org/Shimuuar/type-numbers

Library
  Build-Depends:   base >=3 && <5,
                   template-haskell > 2.0
  Exposed-modules: Types.Number.Classes
                   Types.Number.Nat
                   Types.Number.Nat.Num
                   Types.Number.Int
                   Types.Boolean
  Other-modules:   Types.Number.Nat.Types
                   Types.Number.Int.Types
                   Types.Util
