Name:           type-numbers
Version:        0.1
Cabal-Version:  >= 1.6
License:        BSD3
License-File:   LICENSE
Author:         Alexey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Alexey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       
Category:       Type System
Build-Type:     Simple
Synopsis:       
  Type level numbers implemented using type families.
Description:
  This is type level numbers implemented using type families. Natural
  numbers use binary encoding. With default context stack numbers up
  to 2^18-1 coudl be represented. Signed integer numbers use balanced ternary
  encoding.
  .
  Package is structured as folows:
  .
  * [@Types.Number.Classes@] contain generic type families such as Add
  .
  * [@Types.Number.Nat@] natural numbers implemented using binary encoding
  .
  * [@Types.Number.Int@] signed integers implemented using balanced
    ternary encoding
  .
  * [@Types.Boolean@] type level booleans
  .
  So far comparison of numbers, subtraction and multiplication of
  numbers are supported.

source-repository head
  type:     hg
  location: http://bitbucket.org/Shimuuar/type-numbers

Library
  Build-Depends:   base >=3 && <5,
                   template-haskell > 2.0
  Exposed-modules: Types.Number.Classes
                   Types.Number.Nat
                   Types.Number.Nat.Num
                   Types.Number.Int
                   Types.Boolean
  Other-modules:   Types.Number.Nat.Types
                   Types.Number.Int.Types
                   Types.Util
